add daily scripture
